# Kendra-LLM-test-onEC2

kendra_retriever_samples/: kendra_chat_flan_xl.py  kendra_chat_open_ai.py  kendra_chat_opencalm.py  kendra_retriever_open_ai.py  pyproject.toml  test.py
