[tool.poetry]
name = "kendra-retriever-samples"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "kendra_retriever_samples"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = ">=0.0.213"
boto3 = ">=1.26.159"
openai = "^0.27.8"
anthropic = "^0.3.0"
streamlit = "^1.24.0"
sagemaker = "^2.168.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
